--- a/here1.html
+++ b/here1.html
@@ -111,7 +111,7 @@
 <body>
     <div class="receipt">
         <div class="header">
-            <img src="C:\xampp\htdocs\raid\download (1).png" alt="OPay Logo">
+            <img src="download (1).png" alt="OPay Logo">
             <span class="title">Transaction Receipt</span>
         </div>
 
@@ -141,5 +141,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
